fix layout issues in moodle39

--- a/scss/components/drawer.scss
+++ b/scss/components/drawer.scss
@@ -160,3 +160,9 @@ body {
         margin-top: 0;
     }
 }
+
+[data-region=right-hand-drawer].drawer {
+    top: 138px;
+    height: calc(100% - 138px);
+    width: 380px;
+}
